--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span>a </span> Full-Stack Developer
             </h1>
             <p class="descript">
-                Passionate about mastering the MEAN Stack: Currently honing skills in Angular with an Express and MySQL backend alongside expertise in HTML, CSS, JavaScript, and Bootstrap. Seeking opportunities to apply and expand my knowledge in Full-Stack Development
+                Passionate about mastering the MEAN Stack: Currently honing skills in Angular with an Express and MySQL backend alongside expertise in HTML, CSS, JavaScript, and Bootstrap. Seeking opportunities to apply and expand my knowledge in <span style="color: #90e7f9;">F</span>ull-Stack Development
             </p>
             <div class="linkpage">
                 <a target="_blank"  href="https://www.linkedin.com/in/ashwindeepak/"><i class="fa-brands fa-linkedin me-1 ms-3"></i><span></span></a>
